code-blocks-server/code-blocks/tests/python/snapshots/python__move_block-2.snap
---
source: code-blocks/tests/python/main.rs
expression: "format!(\"{}\\n\\n{:?}\",\n    r#\"\n        #Vsrc\n        @decor1\n        @decor2\n        class A:\n            ...\n           \n        class C:\n            \"\"\"class docstring\"\"\"\n        \n            #Vfail\n            def __init__(self):\n                pass\n        \n            @staticmethod()\n            def foo():\n                \"\"\"method docstring\"\"\"\n                \n            def bar():\n                ...\n                \n        def func():\n            ...\n\"#,\n    result.err().unwrap())"
---

        #Vsrc
        @decor1
        @decor2
        class A:
            ...
           
        class C:
            """class docstring"""
        
            #Vfail
            def __init__(self):
                pass
        
            @staticmethod()
            def foo():
                """method docstring"""
                
            def bar():
                ...
                
        def func():
            ...


Illegal move operation

Caused by:
    Blocks have different parents
