code-blocks-server/code-blocks/tests/python/snapshots/python__move_block-4.snap
---
source: code-blocks/tests/python/main.rs
expression: snapshot
---

        @decor1
        @decor2
        class A:
            ...
           
        class C:
            """class docstring"""
        
            def __init__(self):
                pass
        
            @staticmethod() # src
            def foo():
                """method docstring"""
                
            def bar():
                ...
                
        def func(): # fail
            ...


Illegal move operation

Caused by:
    Blocks have different parents
