code-blocks-server/code-blocks/tests/python/snapshots/python__move_block-5.snap
---
source: code-blocks/tests/python/main.rs
expression: "code_blocks::move_block(src_block, dst_item,\n        r#\"\n        @decor1\n        @decor2\n        class A:\n            ...\n           \n        class C:\n            \"\"\"class docstring\"\"\"\n        \n            def __init__(self):\n                pass\n        \n            #Vsrc\n            @staticmethod()\n            def foo():\n                \"\"\"method docstring\"\"\"\n                \n            #Vdst\n            def bar():\n                ...\n                \n        def func():\n            ...\n\"#,\n        Some(check_fn), false).unwrap()"
---

        @decor1
        @decor2
        class A:
            ...
           
        class C:
            """class docstring"""
        
            def __init__(self):
                pass
        
            #Vsrc
            #Vdst
            def bar():
                ...
                
            @staticmethod()
            def foo():
                """method docstring"""
                
        def func():
            ...

