code-blocks-server/code-blocks/tests/python/snapshots/python__move_block.snap
---
source: code-blocks/tests/python/main.rs
expression: snapshot
---

        #Vsrc
        #Vdst
        class C:
            """class docstring"""
        
            def __init__(self):
                pass
        
            @staticmethod()
            def foo():
                """method docstring"""
                
            def bar():
                ...
                
        @decor1
        @decor2
        class A:
            ...
                
        def func():
            ...


New src start: 377
